--- a/app/src/main/res/layout/item_pokemon_view.xml
+++ b/app/src/main/res/layout/item_pokemon_view.xml
@@ -9,30 +9,32 @@
     android:layout_marginStart="16dp"
     card_view:cardCornerRadius="4dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/pokemonPhoto"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:id="@+id/pokemonPhoto2"
+            android:layout_width="match_parent"
+            android:layout_height="81dp"
             android:importantForAccessibility="no"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/pokemonName"
-            android:layout_width="0dp"
+            android:id="@+id/pokemonName2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins"
+            android:gravity="center"
             android:padding="8dp"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/pokemonPhoto"
             card_view:layout_constraintTop_toTopOf="parent"
             tools:text="Pikachu" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
